# hikari-crescent

./: .codeclimate.yml  .flake8  .gitignore  .isort.cfg  .mypy.ini  .pre-commit-config.yaml  404.html  README.md  \  crescent.html  index.html  justfile  mkdocs.yml  noxfile.py  objects.inv  pyproject.toml  requirements-dev.txt  search.js  sitemap.xml
.github/workflows/: CI.yml  auto-merge-dependabot.yml  ci.yml  codespell.yml  mypy.yml  pdoc.yml  pdoc_build.yml  pdoc_check.yml  publish.yml  pyright.yml  pytest.yml
api_reference/: index.html
api_reference/client/: index.html
api_reference/commands/: index.html
api_reference/context/: index.html
api_reference/errors/: index.html
api_reference/events/: index.html
api_reference/exceptions/: index.html
api_reference/ext/cooldowns/: index.html
api_reference/ext/locales/: index.html
api_reference/ext/tasks/: index.html
api_reference/locale/: index.html
api_reference/mentionable/: index.html
api_reference/plugin/: index.html
api_reference/typedefs/: index.html
crescent/: __init__.py  _about.py  _ux.py  banner.txt  bot.py  client.py  command_handler_proxy.py  context.py  errors.py  event.html  event.py  events.py  exceptions.py  hooks.py  locale.py  mentionable.py  partial.py  plugin.py  ruff.toml  typedefs.py
crescent/commands/: __init__.py  __options_old.py  args.py  decorators.py  errors.py  extensions.py  groups.py  hooks.py  opt.py  options.py  signature.py
crescent/context/: __init__.py  autocomplete_context.py  base_context.py  context.py  interaction_context.py  utils.py
crescent/ext/cooldowns/: __init__.py
crescent/ext/cron/: __init__.py
crescent/ext/defer/: __init__.py
crescent/ext/defertools/: __init__.py
crescent/ext/hooks/: __init__.py
crescent/ext/locales/: __init__.py
crescent/ext/tasks/: __init__.py  cron.py  loop.py  task.py
crescent/internal/: __init__.py  app_command.py  handle_resp.py  includable.py  meta_struct.py  registry.py
crescent/utils/: __init__.py  any_issubclass.py  fast_dataclass.py  gather_iter.py  get_sig.py  hooks.py  iterate_vars.py  options.py  tasks.py
docs/: build.sh  crescent.html  getting_started.md  home.md  index.html  index.md  publish.js  search.js
docs/_build/: index.html
docs/api_reference/: client.md  commands.md  context.md  errors.md  events.md  exceptions.md  index.md  locale.md  mentionable.md  plugin.md  typedefs.md
docs/api_reference/ext/: cooldowns.md  locales.md  tasks.md
docs/crescent/: event.html
docs/guides/: commands.md  error_handling.md  events.md  hooks.md  index.md  making_a_bot.md  plugins.md
docs/guides/ext/: cooldowns.md  locales.md  tasks.md
examples/: api.py  example.py  hooks.py  plugin.py
examples/basic/: autcomplete.py  autocomplete.py  basic.py  command_classes.py  function_commands.py  subclassed.py  user_vs_member.py
examples/bot/: custom_bot_impl.py
examples/custom_contexts/: commands.py  compatible_context.py  hooks.py
examples/error_handling/: basic.py
examples/ext/cooldowns/: basic.py  custom_bucket.py
examples/ext/locales/: basic.py
examples/ext/tasks/: basic.py
examples/folder/: another_plugin.py
examples/hooks/: after_hooks.py  group_hooks.py  hooks.py  plugin_hooks.py
examples/locales/: basic.py  builder.py
examples/plugins/: example.py  plugin.py
examples/plugins/folder/: another_plugin.py  subclassed_plugin.py
examples/rest/: basic.py
getting_started/: index.html
guides/: index.html
guides/commands/: index.html
guides/error_handling/: index.html
guides/events/: index.html
guides/ext/cooldowns/: index.html
guides/ext/locales/: index.html
guides/ext/tasks/: index.html
guides/hooks/: index.html
guides/plugins/: index.html
search/: search_index.json
tests/: .env.example  test_bot.py  test_plugin.py
tests/crescent/: test_error_handling.py  test_locale.py
tests/crescent/commands/: test_argparse.py  test_build.py  test_command_function.py  test_defaults.py  test_member_or_user.py  test_option_types.py  test_permissions.py
tests/crescent/ctx/: test_autocomplete_ctx.py  test_ctx.py
tests/crescent/ext/locales/: test_locales.py
tests/crescent/hooks/: test_hook_order.py
tests/crescent/internal/: test_autocomplete_resp.py  test_compare_commands.py  test_extract_value.py  test_handle_resp.py  test_registry.py
tests/crescent/plugins/: hook_plugin.py  plugin.py  test_plugins.py
tests/crescent/plugins/plugin_folder/: __init__.py
tests/crescent/plugins/plugin_folder/plugin_subfolder/: plugin.py
tests/crescent/plugins/plugin_folder_not_strict/: plugin.py
tests/crescent/utils/: test_any_issubclass.py  test_get_parameters.py
tests/internal/: test_handle_resp.py
tests/test_bot/: .env.example  test_bot.py  test_plugin.py
tests/test_commands/: test_argparse.py  test_command_function.py
tests/utils/: __init__.py  arrays.py  locale.py  mock_bot.py  mock_client.py
